# alfred-workflow-packager

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py  setup.sh
.github/workflows/: build.yml  publish.yml
alfred_workflow_packager/: main.py
awp/: __main__.py  argparse_extras.py  config-schema.json  main.py  packager.py  validator.py
awp/data/: config-schema.json
