[project]
name = "alfred-workflow-packager"
version = "3.2.1"
description = "A CLI utility for packaging and exporting Alfred workflows"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
maintainers = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
license = "MIT"
keywords = ["alfred", "workflow", "package", "export"]
dependencies=[
    "jsonschema>=4,<5",
]

[project.scripts]
awp = "awp.main:main"

[tool.setuptools.package-data]
awp = ["data/*.json"]

[project.urls]
homepage = "https://github.com/caleb531/alfred-workflow-packager"
documentation = "https://github.com/caleb531/alfred-workflow-packager#readme"
repository = "https://github.com/caleb531/alfred-workflow-packager"
changelog = "https://github.com/caleb531/alfred-workflow-packager/releases"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "awp"
module-root = ""

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "typing-extensions==4.13.2",
]

[tool.ruff]
include = ["**/*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # perflint
    "PERF",
]
